name:                circ
version:             0.0.0
synopsis:            A Compiler IR Compiler.
description:         A Compiler IR Compiler.
license:             BSD3
license-file:        LICENSE
author:              Tom Hawkins <tomahawkins@gmail.com>
maintainer:          Tom Hawkins <tomahawkins@gmail.com>
category:            Language
build-type:          Simple
cabal-version:       >= 1.8

library
  build-depends:   base,
                   mtl,
                   containers
  exposed-modules: Language.CIRC
  extensions:
  ghc-options:    -W

source-repository head
  type: git
  location: git://github.com/tomahawkins/circ.git

